--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ torch>=1.12.0
 faker>=18.0.0
 pytest>=7.0.0
 numpy>=1.21.0
+tqdm>=4.60.0
 # Зависимости для генерации датасета через OpenAI
 openai>=1.30.0
 requests>=2.31.0 
